# haskell-web-apps

./: .gitignore  README.md
ImageServer/: ImageServer.cabal  README.md  stack.yaml
ImageServer/.stack-work/: stack.sqlite3
ImageServer/src/: ImageConstants.hs  Main.hs  Render.hs  Shapes.hs
Minesweeper/: Minesweeper.cabal
Minesweeper/.stack-work/: stack.sqlite3
Minesweeper/src/: AutoPlayer.hs  Constants.hs  Main.hs  Mines.hs
