name:                ImageServer
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ImageServer
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Shapes, Render, ImageConstants
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , JuicyPixels
                      , blaze-html
                      , scotty
                      , text
                      , base64
                      , bytestring
                      , containers
                      
