name:                Minesweeper
version:             0.1.0.0
category:            test
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  stack.yaml

executable Minesweeper
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Mines
                       , Constants
                       , AutoPlayer
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , containers
                     , threepenny-gui
                     , random
                     , vector
                
